<resources>
    <string name="app_name">Soli{dar} - Doador</string>
    <string name="cadastre_se_como_doador">Cadastre-se como doador</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cadastre_se_como_ong_donat_ria">Cadastre-se como ong donatária</string>
    <string name="criar_uma_conta">Criar uma Conta</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="repetir_senha">Repetir Senha</string>
    <string name="continuar">Continuar</string>
    <string name="termos_e_condi_es">Termos e Condições</string>
    <string name="ao_criar_uma_conta_voc_concordar_com_nossos">Ao criar uma conta, você concordar com nossos</string>
    <string name="completar_perfil">Completar Perfil</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="bairro">Bairro</string>
    <string name="n_mero">Número</string>
    <string name="cidade">Cidade</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="endere_o">Endereço</string>
    <string name="cep">CEP</string>
    <string name="logo_doar">logo-doar</string>
    <string name="lista_de_produto">Lista de Produtos</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="imagem_do_produto">Imagem do Produto</string>
    <string name="descri_o_do_produto">Descrição do Produto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifica_es">Notificações</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="salvar_altera_es">Salvar Alterações</string>
    <string name="Sair">Sair</string>
    <string name="validar_retirada">Validar Retirada</string>
    <string name="c_digo_da_doa_o">Código da doação</string>
    <string name="para_validar_a_retirada_da_sua_doa_o_insira_abaixo_o_c_digo_informado_pela_ong">Para validar a retirada da sua doação, insira abaixo o código informado pela ONG:</string>
    <string name="validar_doa_o">Validar Doação</string>
    <string name="editar_produto">Editar Produto</string>
    <string name="deletar_produto">Deletar Produto</string>
</resources>