<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tituloTela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo_editar_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_produto"
            android:textColor="@color/cinzaEscuro"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_doador" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:background="@color/cinzaEscuro" />

    </LinearLayout>


    <EditText
        android:id="@+id/nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/nome_do_produto"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloTela" />

    <EditText
        android:id="@+id/imagem_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/imagem_do_produto"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_produto" />


    <EditText
        android:id="@+id/descricao_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/descri_o_do_produto"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagem_produto"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/quantidade_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/quantidade"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descricao_produto"
        tools:ignore="TextContrastCheck" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantidade_produto" />

    <Button
        android:id="@+id/button_editar_produto"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="16dp"
        android:backgroundTint="#F40C0C"
        android:text="@string/salvar_altera_es"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>